migration from gitlab update

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="GrantAi (Grant AI) is an innovative LLM (Large Language Model) powered tool that streamlines the grant application process for researchers, developers, and SMEs. It utilizes the cutting-edge capabilities of Gemini Ultra to interpret project descriptions, analyze vast databases of global funding opportunities, and identify the most suitable grants for applicants."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
